syntax = "proto3";

package api.tollgate.v1beta1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/openmarketplaceengine/openmarketplaceengine/internal/api/tollgate/v1beta1";

service TollgateService {
  rpc GetTollgate(GetTollgateRequest) returns (GetTollgateResponse) {}
  rpc ListTollgates(ListTollgatesRequest) returns (ListTollgatesResponse) {}
}

message GetTollgateRequest {
  string tollgate_id = 1;
}

message GetTollgateResponse {
  Tollgate tollgate = 1;
}

message ListTollgatesRequest {
  int32 page_size = 3;
  string page_token = 4;
}

message ListTollgatesResponse {
  repeated Tollgate tollgates = 1;
  string next_page_token = 2;
}

message Tollgate {
  string id = 1;
  string name = 2;
  BBoxes b_boxes = 3;
  GateLine gate_line = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp updated = 6;
}

message BBoxes {
  repeated BBox b_boxes = 1;
  int32 required = 2;
}

message BBox {
  double lon_min = 1;
  double lat_min = 2;
  double lon_max = 3;
  double lat_max = 4;
}

message GateLine {
  double lon1 = 1;
  double lat1 = 2;
  double lon2 = 3;
  double lat2 = 4;
}
